--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
  <div class="user-details">
   <h1> About me </h1>
-  <img class="Jay" src="{{ "/assets/img/Jay.JPG" | prepend: site.baseurl }}" alt="Jay-img" style="width:540px;height:auto;">
+  <img class="Jay" src="{{ "/assets/img/Jay.PNG" | prepend: site.baseurl }}" alt="Jay-img" style="width:540px;height:auto;">
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
