--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,12 +3,12 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="scidata-logo" src="{{ "/assets/img/scidata-logo.png" | prepend: site.baseurl }}" />
+    <img alt="dragonengine=logo" src="{{ "/assets/img/Dragon_Engine_Logo.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> SciDataUCM </h3>
-    <p>Co-Founder and project-leader of SciDataUCM, a students organization which promotes, expands and shares Data Science and new technologies with open source projects, talks and workshops. </p>
-    <a class="project-link" href="https://scidataucm.github.io">Check it out</a>
+    <h3> Dragon Engine </h3>
+    <p>Dragon Engine is an opensourced game framework designed specifically for Roblox. It seamlessly bridges the gap between the server and client, prevents circular resource requirements, gives the server the ability to generate APIs that clients can access, and much more. </p>
+    <a class="project-link" href="https://github.com/Reshiram110/Dragon-Engine">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
