--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
  <div class="user-details">
   <h1> About me </h1>
-  <img class="Jay" src="{{ "/assets/img/Jay.PNG" | prepend: site.baseurl }}" alt="Jay-img" style="width:540px;height:auto;">
+  <img class="Jay" src="{{ "/assets/img/Jay.png" | prepend: site.baseurl }}" alt="Jay-img" style="width:540px;height:auto;">
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
@@ -13,15 +13,14 @@
     </div>
     <div class="tech">
       <h2>Code</h2>
-	  <i class="devicon-java-plain colored"></i>
-      <i class="devicon-cplusplus-plain colored"></i>
+	  <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-python-plain colored"></i>
-      <p>Java, C++ and Python are my main development languages, they are ideal for implementing powerful and flexible solutions. </p>
+      <p>Javascript (specificially node.js), Lua and Python are my main development languages at the moment. I mostly use Lua for my game projects, as it is a lightweight and powerful scripting language. </p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
-      <i class="fa fa-terminal"></i>
-      <p>Git and shell are my everyday tools as a software developer.</p>
+      <i class="devicon-visualstudio-plain"></i>
+      <p>Git and VSCode are the tools that I use on a daily basis while developing my games.</p>
     </div>
 </div>
