--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,11 +5,11 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Data Science</h2>
+      <h2>Artificial Intelligence</h2>
       <i class="fa fa-database"></i>
       <img src="{{ "/assets/img/brain.png" | prepend: site.baseurl }}" alt="ai" width="64" height="64">
       <i class="fa fa-cloud"></i>
-      <p>Data Science is the fuel of the Computer Science's future, I am mostly interested in machine learning and deep learning. </p>
+      <p>I'm very interested in artificial intelligence. Making strides towards developing a truly concious machine would allow us to understand ourselves. </p>
     </div>
     <div class="tech">
       <h2>Code</h2>
