--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       </h1>
       <div class="header-icons">
 		<a aria-label="My Twitter" target="_blank" href="{{site.l_my-twitter}}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-		<a aria-label="My Github" target="_blank" href="{{site.l_my-github}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+		<a aria-label="My Github" target="_blank" href="{{site.l_my-github}}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
         <a aria-label="Send email" href="{{site.l_my-email}}"><i class="icon fa fa-envelope"></i></a>
       </div>
       <div class="header-links">
